--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <h2>how good is your colour vision?</h2>
             <p>Put your visual prowess to the test now!</p>
         </section>
-        <section>
+        <section class="game-section">
             <h3 data-testid="scor">Score: 0</h3>
             <h3 data-testid="gameStatus"></h3>
-            <div data-testid="colorBox"></div>
+            <div data-testid="colorBox" class="color-box"></div>
             <p data-testid="gameInstructions">Click the button that matches the above colour!</p>
-            <div class="colorOptions">
+            <div class="color-options">
                 <button data-testid="colorOption"></button>
                 <button data-testid="colorOption"></button>
                 <button data-testid="colorOption"></button>
@@ -36,7 +36,7 @@
             <button data-testid="newGameButton"></button>
         </section>
     </main>
-    <footer>HNG Internship © <span id="year">2024</span></footer>
+    <footer>HNG Internship - Tommy © <span id="year">2024</span></footer>
 
 </body>
 
