style: style control buttons for submit choice and restart game.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <button data-testid="colorOption"></button>
                 <button data-testid="colorOption"></button>
             </div>
-            <button data-testid="submitOptionButton">Submit Choice!</button>
-            <button data-testid="newGameButton"></button>
+            <button data-testid="submitOptionButton" class="control">Submit Choice!</button>
+            <button data-testid="newGameButton" class="control">Restart Game</button>
         </section>
     </main>
     <footer>HNG Internship - Tommy © <span id="year">2024</span></footer>
