style: update styles.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <h1>guess the color game</h1>
     </header>
     <main>
-        <section>
+        <section class="intro">
             <h2>how good is your colour vision?</h2>
             <p>Put your visual prowess to the test now!</p>
         </section>
         <section class="game-section">
-            <h3 data-testid="scor">Score: 0</h3>
+            <h3 data-testid="score">Score: 0</h3>
             <h3 data-testid="gameStatus"></h3>
             <div data-testid="colorBox" class="color-box"></div>
             <p data-testid="gameInstructions">Click the button that matches the above colour!</p>
@@ -32,7 +32,7 @@
                 <button data-testid="colorOption"></button>
                 <button data-testid="colorOption"></button>
             </div>
-            <button data-testid="submitOptionButton" class="control">Submit Choice!</button>
+            <button data-testid="submitOptionButton" class="control">Submit Choice</button>
             <button data-testid="newGameButton" class="control">Restart Game</button>
         </section>
     </main>
