--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/icon.png" type="image/png">
     <link rel="stylesheet" href="styles/main.css">
     <title>Guess the color game</title>
 </head>
@@ -38,6 +38,7 @@
     </main>
     <footer>HNG Internship - Tommy © <span id="year">2024</span></footer>
 
+    <script src="scripts/index.mjs"></script>
 </body>
 
 </html>
