--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </main>
     <footer>HNG Internship - Tommy © <span id="year">2024</span></footer>
 
-    <script src="scripts/index.mjs"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
