--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 <body>
     <header>
+        <div class="logo">
+            <img src="assets/images/icon.png" alt="game logo">
+            <p>guess the color</p>
+        </div>
         <h1>guess the color game</h1>
     </header>
     <main>
