feat: add ids to the option control buttons.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <div data-testid="colorBox" class="color-box"></div>
             <p data-testid="gameInstructions">Click the button that matches the above colour!</p>
             <div class="color-options">
-                <button data-testid="colorOption"></button>
-                <button data-testid="colorOption"></button>
-                <button data-testid="colorOption"></button>
-                <button data-testid="colorOption"></button>
-                <button data-testid="colorOption"></button>
-                <button data-testid="colorOption"></button>
+                <button data-testid="colorOption" id="color-1"></button>
+                <button data-testid="colorOption" id="color-2"></button>
+                <button data-testid="colorOption" id="color-3"></button>
+                <button data-testid="colorOption" id="color-4"></button>
+                <button data-testid="colorOption" id="color-5"></button>
+                <button data-testid="colorOption" id="color-6"></button>
             </div>
             <button data-testid="submitOptionButton" class="control">Submit Choice</button>
             <button data-testid="newGameButton" class="control">Restart Game</button>
