change the text in the submit choice button to confirm choice.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button data-testid="colorOption" id="color-5"></button>
                 <button data-testid="colorOption" id="color-6"></button>
             </div>
-            <button data-testid="submitOptionButton" class="control">Submit Choice</button>
+            <button data-testid="confirmOptionButton" class="control">Confirm Choice</button>
             <button data-testid="newGameButton" class="control">Restart Game</button>
         </section>
     </main>
