add id to control buttons.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <button data-testid="colorOption" id="color-5"></button>
                 <button data-testid="colorOption" id="color-6"></button>
             </div>
-            <button data-testid="confirmOptionButton" class="control">Confirm Choice</button>
-            <button data-testid="newGameButton" class="control">Restart Game</button>
+            <button data-testid="confirmOptionButton" class="control" id="confirm">Confirm Choice</button>
+            <button data-testid="newGameButton" class="control" id="restart">Restart Game</button>
         </section>
     </main>
     <footer>HNG Internship - Tommy © <span id="year">2024</span></footer>
