edit game instructions.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3 data-testid="score">Score: 0</h3>
             <h3 data-testid="gameStatus"></h3>
             <div data-testid="colorBox" class="color-box"></div>
-            <p data-testid="gameInstructions">Click the button that matches the above colour!</p>
+            <p data-testid="gameInstructions">Select the button that matches the above colour and confirm your choice below!</p>
             <div class="color-options">
                 <button data-testid="colorOption" id="color-1"></button>
                 <button data-testid="colorOption" id="color-2"></button>
