minor tweaks and edits.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         </section>
     </main>
-    <footer>HNG Internship - Tommy © <span id="year">2024</span></footer>
+    <footer>HNG Internship - Tommy © <span id="year"></span></footer>
 
     <script src="scripts/index.js"></script>
 </body>
